<resources>
    <string name="app_name">Today</string>

    <string name="business">business</string>
    <string name="entertainment">entertainment</string>
    <string name="general">general</string>
    <string name="health">health</string>
    <string name="science">science</string>
    <string name="sports">sports</string>
    <string name="technology">technology</string>

    <string name="search">search</string>
    <string name="radiobutton">RadioButton</string>

    <string name="all_item">All</string>
    <string name="usa_item">USA</string>
    <string name="ukraine_item">Ukraine</string>
    <string name="jp_item">Japan</string>
</resources>